# blog-sample-code

./: .hgignore  CMakeLists.txt  Readme.txt
2009-10-12/: Readme.txt  SimpleRectangle.cpp
2009-10-12/SimpleRectangle/: Readme.txt  SimpleRectangle.cpp  SimpleRectangle.vcproj
2009-10-14/GLDrawCircle/: GLDrawCircle.cpp  GLDrawCircle.vcproj
2009-10-14/GLDrawFourCircle/: GLDrawFourCircle.cpp  GLDrawFourCircle.vcproj
2009-10-14/GLFourCircleAnimation/: GLFourCircleAnimation.cpp  GLFourCircleAnimation.vcproj
2009-10-14/GLShadeAnimation/: GLShadeAnimation.cpp  GLShadeAnimation.vcproj  ReadMe.txt
2009-10-14/WinDrawCircle/: WinDrawCircle.cpp  WinDrawCircle.vcproj
2009-10-18/glInterleavedArrays/: glInterleavedArrays.cpp  glInterleavedArrays.vcproj
2009-10-18/glRectWithArrayDraw/: glRectWithArrayDraw.cpp  glRectWithArrayDraw.vcproj
2009-10-18/glRectWithDrawElements/: glRectWithDrawElements.cpp  glRectWithDrawElements.vcproj
2009-10-18/glRectWithMultiDrawElements/: glRectWithMultiDrawElements.cpp  glRectWithMultiDrawElements.vcproj
2009-10-18/glVertexArray/: glVertexArray.cpp  glVertexArray.vcproj
2009-10-18/glVertexArrayWithColor/: glVertexArrayWithColor.cpp  glVertexArrayWithColor.vcproj
2009-10-20/OpenGL/: .cproject  .directory  .project  Makefile  Makefile.Debug  Makefile.Release  OpenGL.pro  main.cpp  opengl.cpp  opengl.h  opengl.ui  ui_opengl.h
2009-10-21/gl3DCoordinate/: gl3DCoordinate.cpp  gl3DCoordinate.vcproj
JTTangram/: Defines.h  GLParallelogram.h  GLRectangle.h  GLTriangle.h  JTTangram.cpp  JTTangram.vcproj  ReadMe.txt
(+87 files in other folders)
